--- a/book_store_front/src/assets/css/styles.css
+++ b/book_store_front/src/assets/css/styles.css
@@ -8,7 +8,9 @@
     font-size: x-large;
 }
 
-.main-section input[type="text"], input[type="date"], input[type="file"], input[type="number"], select {
+.main-section input[type="text"], [type="password"],
+        input[type="date"], input[type="file"],
+        input[type="number"], select {
     font-size: x-large;
     width: 650px;
     height: 50px;
@@ -22,9 +24,8 @@
 
 .main-section textarea {
     font-size: x-large;
-    width: 650px;
+    width: 800px;
     height: 250px;
-    display: block;
     margin-bottom: 20px;
     border-radius: 15px;
 }
@@ -85,4 +86,39 @@
     font-size: large;
     height: 70px;
     background-color: rgb(202, 202, 202);
+}
+
+
+.list-book {
+    display: flex;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    padding-left: 10px;
+    margin-left: 180px;
+    margin-right: 280px;
+    margin-top: 20px;
+    border: solid 1px;
+}
+
+.list-book div{
+    font-size: x-large;
+}
+
+.list-book button{
+    margin-top: 50px;
+    margin-left: 250px;
+    background-color: red;
+    color: white;
+    width: 100px;
+    height: 50px;
+    text-align: center;
+    border-radius: 15px;
+    cursor: pointer;
+    font-weight: blod;
+    font-size: 1.2em;
+    border: none;
+}
+
+.list-book button:hover{
+    background-color: brown;
 }
