--- a/book_store_front/src/assets/css/mainPage.css
+++ b/book_store_front/src/assets/css/mainPage.css
@@ -19,8 +19,8 @@
     height: 500px;
 }
 
-.book-name{
-    font-family:Georgia, 'Times New Roman', Times, serif;
+.book-name {
+    font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: large;
 }
 
@@ -47,7 +47,31 @@
 
 .book:hover {
     cursor: alias;
-    background-color:darkgrey;
+    background-color: darkgrey;
     transform: scale(1.1);
     transition: transform 0.5s ease;
+}
+
+
+.chooseGenre {
+    padding-left: 20%;
+    width: 70%;
+    margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.chooseGenre div {
+    display: flex;
+    align-items: center;
+}
+
+.chooseGenre input[type="checkbox"] {
+    margin-right: 5px;
+}
+
+.chooseGenre label {
+    cursor: pointer;
+    user-select: none;
 }
